@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997, 2019 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -29,8 +29,7 @@
     <description>JAX-WS RI Tools</description>
 
     <properties>
-        <ant.version>1.10.5</ant.version>
-        <findbugs.exclude>${project.basedir}/exclude.xml</findbugs.exclude>
+        <spotbugs.exclude>${project.basedir}/exclude.xml</spotbugs.exclude>
     </properties>
 
     <dependencies>
@@ -55,26 +54,20 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>policy</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
+            <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-jxc</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
+            <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-xjc</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.sun.istack</groupId>
-            <artifactId>istack-commons-runtime</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -176,7 +169,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <excludeArtifactIds>resolver,ant-launcher,ant-nodeps,cobertura,cobertura-runtime</excludeArtifactIds>
+                            <excludeArtifactIds>jakarta.activation-api,ant-launcher,ant-nodeps,cobertura,cobertura-runtime</excludeArtifactIds>
                             <excludeScope>system</excludeScope>
                         </configuration>
                     </execution>
@@ -199,9 +192,12 @@
                     <execution>
                         <id>default-compile</id>
                         <configuration>
-                            <includes>
-                                <include>module-info.java</include>
-                            </includes>
+                            <compilerArgs>
+                                <arg>--add-reads</arg>
+                                <arg>com.sun.tools.ws.wscompile=ALL-UNNAMED</arg>
+                                <arg>--add-reads</arg>
+                                <arg>com.sun.tools.xjc=ALL-UNNAMED</arg>
+                            </compilerArgs>
                         </configuration>
                     </execution>
                     <execution>
@@ -220,20 +216,26 @@
                         <id>default-testCompile</id>
                         <configuration>
                             <compilerArgs>
+                                <arg>--add-modules</arg>
+                                <arg>junit,ant</arg>
+                                <arg>--add-reads</arg>
+                                <arg>com.sun.tools.ws.wscompile.test=junit</arg>
+                                <arg>--add-reads</arg>
+                                <arg>com.sun.tools.ws.wscompile=ant</arg>
                                 <arg>--add-exports</arg>
-                                <arg>com.sun.tools.ws/com.sun.tools.ws.wsdl.parser=com.sun.tools.ws.test</arg>
+                                <arg>com.sun.tools.ws.wscompile/com.sun.tools.ws.processor=com.sun.tools.ws.wscompile.test</arg>
                                 <arg>--add-exports</arg>
-                                <arg>com.sun.tools.ws/com.sun.tools.ws.processor=com.sun.tools.ws.test</arg>
+                                <arg>com.sun.tools.ws.wscompile/com.sun.tools.ws.processor.modeler=com.sun.tools.ws.wscompile.test</arg>
                                 <arg>--add-exports</arg>
-                                <arg>com.sun.tools.ws/com.sun.tools.ws.processor.modeler=com.sun.tools.ws.test</arg>
+                                <arg>com.sun.tools.ws.wscompile/com.sun.tools.ws.processor.modeler.annotation=com.sun.tools.ws.wscompile.test</arg>
                                 <arg>--add-exports</arg>
-                                <arg>com.sun.tools.ws/com.sun.tools.ws.processor.modeler.annotation=com.sun.tools.ws.test</arg>
+                                <arg>com.sun.tools.ws.wscompile/com.sun.tools.ws.processor.modeler.wsdl=com.sun.tools.ws.wscompile.test</arg>
                                 <arg>--add-exports</arg>
-                                <arg>com.sun.tools.ws/com.sun.tools.ws.processor.modeler.wsdl=com.sun.tools.ws.test</arg>
+                                <arg>com.sun.tools.ws.wscompile/com.sun.tools.ws.util=com.sun.tools.ws.wscompile.test</arg>-->
                                 <arg>--add-exports</arg>
-                                <arg>com.sun.tools.ws/com.sun.tools.ws.wsdl.document=com.sun.tools.ws.test</arg>
+                                <arg>com.sun.tools.ws.wscompile/com.sun.tools.ws.wsdl.document=com.sun.tools.ws.wscompile.test</arg>
                                 <arg>--add-exports</arg>
-                                <arg>com.sun.tools.ws/com.sun.tools.ws.util=com.sun.tools.ws.test</arg>
+                                <arg>com.sun.tools.ws.wscompile/com.sun.tools.ws.wsdl.parser=com.sun.tools.ws.wscompile.test</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
@@ -252,17 +254,6 @@
                         <jaxws-api.version>${jaxws-api.version}</jaxws-api.version>
                         <net.sourceforge.cobertura.datafile>${net.sourceforge.cobertura.datafile}</net.sourceforge.cobertura.datafile>
                     </systemPropertyVariables>
-                    <forkCount>1</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <argLine>
-                        --add-exports com.sun.tools.ws/com.sun.tools.ws.wsdl.parser=com.sun.tools.ws.test
-                        --add-exports com.sun.tools.ws/com.sun.tools.ws.processor=com.sun.tools.ws.test
-                        --add-exports com.sun.tools.ws/com.sun.tools.ws.processor.modeler=com.sun.tools.ws.test
-                        --add-exports com.sun.tools.ws/com.sun.tools.ws.processor.modeler.annotation=com.sun.tools.ws.test
-                        --add-exports com.sun.tools.ws/com.sun.tools.ws.processor.modeler.wsdl=com.sun.tools.ws.test
-                        --add-exports com.sun.tools.ws/com.sun.tools.ws.wsdl.document=com.sun.tools.ws.test
-                        --add-exports com.sun.tools.ws/com.sun.tools.ws.util=com.sun.tools.ws.test
-                    </argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -292,16 +283,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-jar</id>
-                        <configuration>
-                            <archive>
-                                <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
-                            </archive>
-                        </configuration>
-                    </execution>
-                </executions>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
             </plugin>
 <!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -374,12 +362,22 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <doclint>none</doclint>
                     <additionalOptions>
-                        --add-reads com.sun.tools.ws=ALL-UNNAMED
-                        --add-reads com.sun.istack.tools=ALL-UNNAMED
+                        --add-reads com.sun.tools.ws.wscompile=ALL-UNNAMED
+                        --add-reads com.sun.tools.xjc=ALL-UNNAMED
                     </additionalOptions>
                 </configuration>
             </plugin>
